Link to shitty client guide

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,8 +108,9 @@
     Want more horny debauchery? Try <a href="https://joi.how">joi.how</a>.<br/>
     Horny lizards Warren, Taylor, and Ki conceived of and drawn by
     <a href="https://www.furaffinity.net/user/cherryzbun/" target=_blank>CherryzBun</a><br/>
-    <%= link_to 'Need help with Walltaker?', help_path %> &nbsp
-    <%= link_to 'FAQs', faq_path %>
+    <%= link_to 'Need help with Walltaker?', help_path %> &nbsp;
+    <%= link_to 'FAQs', faq_path %> &nbsp;
+    <%= link_to 'Client Building Guide', client_guide_path %>
   </p>
   <small>
     © joi.how 2024 / Commit
