--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -110,7 +110,7 @@
     <a href="https://www.furaffinity.net/user/cherryzbun/" target=_blank>CherryzBun</a><br/>
     <%= link_to 'Need help with Walltaker?', help_path %> &nbsp;
     <%= link_to 'FAQs', faq_path %> &nbsp;
-    <%= link_to 'Client Building Guide', client_guide_path %>
+    <%= link_to 'Client Building Guide', client_guide_path, target: '_top' %>
   </p>
   <small>
     © joi.how 2024 / Commit
