--- a/app/views/kink/_kink.html.erb
+++ b/app/views/kink/_kink.html.erb
@@ -1,10 +1,12 @@
-<%# locals: (kink:, is_current_user: false, destination: :kink_show, link: nil) -%>
+<%# locals: (kink:, is_current_user: false, destination: :kink_show, link: nil, user: nil) -%>
 
 <%= turbo_frame_tag kink, class: ("kink #{kink.works_on_e621? ? 'valid' : 'untested'}") do %>
   <%= link_to destination == :search ? porn_search_search_path(tags: kink.name, link:, full_rerender: true) : kink_show_path(kink), target: destination == :search ? 'pornsearch' : '_top' do %>
     <%= kink.name %>
-    <% if link && kink.is_starred?(link.user) %>
-      <ion-icon name="star" class="big star"></ion-icon>
+    <% unless is_current_user %>
+      <% if (link && kink.is_starred?(link.user)) || (user && kink.is_starred?(user)) %>
+        <ion-icon name="star" class="big star"></ion-icon>
+      <% end %>
     <% end %>
   <% end %>
 
