--- a/app/views/friendships/_friendship.html.erb
+++ b/app/views/friendships/_friendship.html.erb
@@ -26,7 +26,7 @@
     <% if action_name == 'index' %>
       <%= button_tag class: 'no-underline secondary', data: { action: 'click->friendship#confirm' } do %>
         <ion-icon role="presentation" name="heart-dislike"></ion-icon>
-        Unfriend
+        Delete
       <% end %>
     <% end %>
     <% if action_name == 'requests' %>
