--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -8,6 +8,10 @@
   </div>
   <div class="right">
     <% if action_name == 'index' %>
+      <%= link_to surrenders_path, class: 'no-underline' do %>
+        <ion-icon name="ticket"></ion-icon>
+        Surrender
+      <% end %>
       <% if has_requests? %>
         <span class="notice-right">New Requests <ion-icon role="presentation" name="arrow-forward-outline"></ion-icon></span>
       <% end %>
