--- a/app/views/application/_notifications.html.erb
+++ b/app/views/application/_notifications.html.erb
@@ -29,6 +29,8 @@
                 <ion-icon role="presentation" name="ice-cream"></ion-icon>
               <% when 'comment_on_your_link' %>
                 <ion-icon role="presentation" name="heart"></ion-icon>
+              <% when 'surrender_event' %>
+                <ion-icon role="presentation" name="ticket"></ion-icon>
             <% end %>
             <div>
               <p><%= notification.text %></p>
