--- a/app/views/surrenders/_form.html.erb
+++ b/app/views/surrenders/_form.html.erb
@@ -1,9 +1,9 @@
 <%# locals: (surrender:, friendship_options:) -%>
 
 <%= form_with model: surrender do |f| %>
-  <%= f.label :friendship, class: 'form__row' do %>
-    Surrender To
-    <%= f.select :friendship, friendship_options %>
+  <%= f.label :friendship, class: 'form__row form__row--stacking' do %>
+    <strong>Surrender To</strong>
+    <%= f.select :friendship, friendship_options, {}, class: 'no-margin' %>
   <% end %>
 
   <%= f.submit "Give them my account for up to 24hrs", class: 'danger-button accent-block__button' %>
