--- a/app/views/surrenders/_surrender.html.erb
+++ b/app/views/surrenders/_surrender.html.erb
@@ -1,6 +1,6 @@
 <%# locals: (surrender:) -%>
 
-<%= turbo_frame_tag dom_id(surrender) do %>
+<%= turbo_frame_tag dom_id(surrender), target: '_top' do %>
   <div class="accent-block">
     <div class="accent-block__charm">
       <ion-icon role="presentation" name="eye-off"></ion-icon>
